<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps</string>

    <string name="app_spotify_streamer">Spotify Streamer</string>
    <string name="app_scores">Football Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_build_it_bigger">Build It Bigger</string>
    <string name="app_xyz_reader">XYZ Reader</string>
    <string name="app_capstone">Capstone</string>

    <string name="toast">This button will launch my %1$s app!</string>

    <string name="action_settings">Settings</string>
</resources>
