<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/title_bot_padding"
        android:text="@string/title"
        android:textColor="@color/text_secondary_inverse"/>

    <Button
        android:id="@+id/btn_app_spotify"
        style="@style/btn_app"
        android:text="@string/app_spotify_streamer"/>

    <Button
        android:id="@+id/btn_app_scores"
        style="@style/btn_app"
        android:text="@string/app_scores"/>

    <Button
        android:id="@+id/btn_app_library"
        style="@style/btn_app"
        android:text="@string/app_library"/>

    <Button
        android:id="@+id/btn_app_build_it_bigger"
        style="@style/btn_app"
        android:text="@string/app_build_it_bigger"/>

    <Button
        android:id="@+id/btn_app_xyz_reader"
        style="@style/btn_app"
        android:text="@string/app_xyz_reader"/>

    <Button
        android:id="@+id/btn_app_capstone"
        style="@style/btn_app_highlight"
        android:text="@string/app_capstone"/>

</LinearLayout>
